--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+## [0.0.7] - 09-08-2017
+### Added
+- Log parser runtime /log/<dd-mm-year>_Log
+- mongo: Log new products to <dd-mm-year>_Log
+- Double price insert check (daily)
+
+## [0.0.6] - 08-08-2017
+### Added
+- Log new / double parsed products and their images
+
 ## [0.0.5] - 07-08-2017
 ### Changed
 - set image collect dir from environment (jenkins)
