--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+## [1.0.0] - 11-08-2017
+### Changed
+- daemonize parser (service)
+- tcp server waits for `start` command on localhost:8800
+
 ## [0.0.7] - 09-08-2017
 ### Added
 - Log parser runtime /log/<dd-mm-year>_Log
