--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+## [1.0.1] - 15-08-2017
+### Fixed
+- ssl timeout exception catched
+
 ## [1.0.0] - 11-08-2017
 ### Changed
 - daemonize parser (service)
